- Change: Lots of deprecations.
- Change: Removed the XML decoder.
- Change: Moved the return type retrieval by reflection to the
  more appropriate AbstractDeclaration class.
- Change: Moved the parameter analysis to the declaration
  analysis classes.

4.1.4
- Added support for readonly properties
- Bugfix: Correctly identify uninitialized properties.
- Bugfix: Prevent unnecessary filesystem calls in the filepath analysis.

4.1.3
- Added microtime analysis to the float routing.
- Added microtime analysis to the string scalar analysis.
- Added type hint to the additional data for the first
  element.
- Updated to PHP 8.1
- Change: Code cleanup.
- Bugfix: Display info about public properties in predeclared
  classes.
- Bugfix: Comment inheritance resolving works more reliable.
- Bugfix: Method return type comment parsing works more
  reliable.
- Bugfix: Standard Loading of the configuration file works again.
- Bugfix: Mime type string and file do not overwrite each others
  anymore.
- Bugfix: K-Type padding for the Hans skin is too small.

4.1.2
- Change: Do not display an empty array, when there are no
  attributes in the XML analysis.
- Bugfix: Add additional error handling to the file service
  to get by with high traffic sites (Please, never debug a
  productive site. At least make sure that the logger can
  only get triggered by the dev.).
- Bugfix: Applied sorting to the list of getter methods.
- Bugfix: Make better use of the recursion detection for
  the XML analysis.
- Bugfix: Fixed / updated the doc comments.
- Bugfix: Object recursions in the "$this protected" context
  can not generate source code.

4.1.1
- Change: Code cleanup.
- Bugfix: Predefined objects do not get their properties
  analysed.
- Bugfix: Display the DateTime anomaly "public" properties.

4.1.0
- Added a log model to use for a logger implementation.
- Added .min. support for css files.
- Added apostrophes around string array keys to the SmokyGrey
  skin for better readability.