@@ -837,7 +837,6 @@ var SmokyGrey = (function (_super) {
                             json[prop] = json[prop].replace(regex, function (match, grp) {
                                 return String.fromCharCode(parseInt(grp, 16));
                             });
-                            json[prop] = decodeURI(json[prop]);
                             html += '<tr><td class="kinfo">' + prop + '</td><td class="kdesc">' + json[prop] + '</td></tr>';
                             counter++;
                         }
