@@ -151,6 +151,8 @@ tsConfigReset = "All local configuration have been reset."
 tsNoDataAvailable = "No data available for this item."
 tsAdditionalData = "Additional data"
 
+realPath = "real Path"
+
 [de]
 outputReadable = "Ausgabe"
 propertiesReadable = "Properties"
@@ -304,3 +306,5 @@ tsPleaseReload =  "Reload erforderlich für die neuen lokalen Einstellungen"
 tsConfigReset = "Die lokalen Einstellungen wurden zurückgesetzt,"
 tsNoDataAvailable = "Keine zusätzlichen Infos vorhanden."
 tsAdditionalData = "Zusätzliche Infos"
+
+realPath = "tatsächlicher Pfad"
